objects/Custom_Opportunity_Split__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>tbd</description>
        <label>BC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Classification_ID__c</fullName>
        <description>tbd</description>
        <label>Booking Classification ID</label>
        <referenceTo>Booking_Classification__c</referenceTo>
        <relationshipName>Custom_Opportunity_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Booking_Classification__c</fullName>
        <description>Indicates 1 of 4 bookings classifications as defined by the business.  Bookings Classifications are NBB (New Booked Business), MYD (Multi-Year Deal), Renewal and Other.</description>
        <label>Booking Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NBB</fullName>
                </value>
                <value>
                    <fullName>MYD</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <description>A manual classification of an Opportunity Split record.</description>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Influence</fullName>
                </value>
                <value>
                    <fullName>VST</fullName>
                </value>
                <value>
                    <fullName>Presales</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Ownership Group</fullName>
                </value>
                <value>
                    <fullName>Management Company</fullName>
                </value>
                <value>
                    <fullName>Ad Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>tbd</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Custom_Opportunity_Splits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>tbd</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Percent__c</fullName>
        <description>tbd</description>
        <label>Split Percent</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>tbd</description>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Opportunity_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Bookings_Classifications_Price__c</fullName>
        <formula>Booking_Classification_ID__r.Total_Price_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bookings Classifications Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UFR_Amount_Old__c</fullName>
        <description>The Up For Renewal (UFR) value represents the total dollar amount that existed on a previous contract of which the current Renewal value makes up either a portion or the whole UFR value.  This will only dollars on split records with the bookings classification of Renewal or MYD.</description>
        <label>UFR Amount Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UFR_Amount__c</fullName>
        <description>The Up For Renewal (UFR) value represents the total dollar amount that existed on a previous contract of which the current Renewal value makes up either a portion or the whole UFR value. This will only dollars on split records with the bookings classification of Renewal or MYD.</description>
        <formula>IF( OR(ISPICKVAL(Booking_Classification__c, "Renewal"), ISPICKVAL(Booking_Classification__c, "MYD")), Booking_Classification_ID__r.UFR_USD__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>index__c</fullName>
        <description>this is to control numbering on the opportunity splits page. lowest index records will be at the top of the page.</description>
        <inlineHelpText>this is to control numbering on the opportunity splits page. lowest index records will be at the top of the page.</inlineHelpText>
        <label>index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>splitAmount__c</fullName>
        <description>tbd</description>
        <formula>Amount__c *  Split_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <description>temp</description>
    <label>Custom Opportunity Split</label>
    <nameField>
        <displayFormat>COS-{00000}</displayFormat>
        <label>Split ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Opportunity Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>